Update dev dependencies. Set background color to white so that extension panel is readable on the 'dark' theme. Fixes #12.

--- a/css/panel.css
+++ b/css/panel.css
@@ -12,6 +12,7 @@
 
 body {
     padding: 10px;
+    background: white;
 }
 
 .intro {
